WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193268
Blob references for System Previews don't get a correct file extension
https://bugs.webkit.org/show_bug.cgi?id=193268
Summary
Blob references for System Previews don't get a correct file extension
Dean Jackson
Reported
2019-01-08 16:44:59 PST
Blob references for System Previews don't get a correct file extension
Attachments
Patch
(13.95 KB, patch)
2019-01-08 16:52 PST
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-01-08 16:45:35 PST
<
rdar://problem/47133037
>
Dean Jackson
Comment 2
2019-01-08 16:52:32 PST
Created
attachment 358655
[details]
Patch
Dean Jackson
Comment 3
2019-01-08 17:17:59 PST
Committed
r239758
: <
https://trac.webkit.org/changeset/239758
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug